force-app/main/default/objects/pmdm__ProgramCohort__c/pmdm__ProgramCohort__c.object-meta.xml
<CustomObject>
    <label>Program Cohort</label>
    <nameField>
        <label>Program Cohort</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Cohorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>