force-app/main/default/objects/pmdm__ProgramCohort__c/fields/pmdm__Program__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Program that this Program Cohort belongs to.</description>
    <inlineHelpText>The Program that this Program Cohort belongs to.</inlineHelpText>
    <label>Program</label>
    <referenceTo>pmdm__Program__c</referenceTo>
    <relationshipLabel>Program Cohorts</relationshipLabel>
    <relationshipName>ProgramCohorts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>