force-app/main/default/objects/pmdm__ProgramCohort__c/validationRules/pmdm__START_DATE_PROGRAM_DATES.validationRule-meta.xml
<ValidationRule>
    <fullName>pmdm__START_DATE_PROGRAM_DATES</fullName>
    <active>true</active>
    <description>Ensures the Start Date is within the start and end dates of the related program.</description>
    <errorConditionFormula>OR(
 pmdm__StartDate__c &lt; pmdm__Program__r.pmdm__StartDate__c ,
 pmdm__StartDate__c &gt; pmdm__Program__r.pmdm__EndDate__c
)</errorConditionFormula>
    <errorMessage>Start Date must be within the range of the related Program Start and End Dates.</errorMessage>
</ValidationRule>